# shahnameh-api

./: README.md  pyproject.toml
app/: dependencies.py  main.py
app/api/v1/: chapter.py  explanation.py  verse.py
app/core/: database.py
app/models/: chapter.py  chapter_metadata.py  explanation.py  verse.py
app/repositories/: chapter.py  explanation.py  verse.py
app/schemas/: chapter.py  chapter_metadata.py  explanation.py  verse.py
app/services/: chapter_service.py  explanation.py  verse_service.py
app/utils/: model_uuid.py
